feat: altera o entrevistado e termina o site.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina inicial</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="shortcut icon" href="./assets/images/edu.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/cris.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
         <div></div>
         <div id="textoPrincipalHeader">
-            <h1>Desenvolvimento de sistemas</h1>
-            <p>Com Eduardo Cesar Correia</p>
+            <h1>Analista de operações</h1>
+            <p>Com Cristiano Silva Nunes</p>
         </div>
 
         <div id="navegacaoHeader">
@@ -24,11 +24,11 @@
     <main>
         <section id="sectionImportanciaDev">
             <div id="importanciaH1">
-                <h1>Importancia dos DEVS</h1>
+                <h1>Importancia dos analistas de operações</h1>
             </div>
             <div id="importanciaP">
-                <p>desenvolvimento de sistemas é a principal ferramenta que temos para solucionar problemas reais em escala global, seja na telemedicina que salva vidas ou na logística complexa que entrega alimentos. Hoje, o software deixou de ser apenas um acessório para se tornar a própria infraestrutura da economia, da cultura e da nossa vida diária. Entender e participar dessa era não é mais uma opção; é uma necessidade para quem deseja ativamente moldar o futuro.</p>
-                <p>Mais do que eficiência, os sistemas são o que nos conectam. Da rede social que aproxima amigos distantes ao aplicativo de banco que nos dá controle financeiro na palma da mão, o software elimina barreiras físicas e redefine o acesso à informação e aos mercados. Ele também serve como plataforma para todas as outras grandes revoluções tecnológicas, sendo a base indispensável para avanços como a Inteligência Artificial, a Internet das Coisas (IoT) e a análise de Big Data.</p>
+                <p>A importância dos analistas de operações está na garantia da eficiência, otimização de processos, redução de custos e tomada de decisões estratégicas. Eles são fundamentais para analisar o desempenho das operações, identificar gargalos, propor melhorias e garantir que as metas de negócio sejam atingidas. Essa função é crucial para o sucesso de empresas em diversos setores, desde a logística e produção até as finanças e o atendimento ao cliente. </p>
+                <p>Suas responsabilidades incluem identificar falhas e oportunidades de melhoria, monitorar indicadores-chave de desempenho (KPIs), desenvolver relatórios e colaborar com outros departamentos para garantir o bom funcionamento das operações. </p>
             </div>
         </section>
 
@@ -45,7 +45,7 @@
         </div>
 
         <div id="textosFinais">
-            <p>Entrevista com Eduardo Cesar Correia – Profissional em desenvolvimento de sistemas</p>
+            <p>Entrevista com Cristiano Silva Nunes – Analista de operações profissional.</p>
             <p>© 2025 Vitor Nunes. Todos os direitos reservados.</p>
 
         </div>
