--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
-    <link rel="shortcut icon" href="../assets/images/edu.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/cris.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
         <div></div>
         <div id="textoPrincipalHeader">
-            <h1>Sobre o Eduardo Cesar Correia</h1>
-            <p>Docente do SENAI valinhos</p>
+            <h1>Sobre o Cristiano Silva Nunes</h1>
+            <p>Analista de operações</p>
         </div>
 
         <div id="navegacaoHeader">
@@ -23,17 +23,16 @@
 
     <main>
 
-        <img id="devs" src="../assets/images/dudu.png" alt="devs trabalhando" width="600px">
+        <img id="cris" src="../assets/images/cris.jpg" alt="Cristiano">
 
         <section id="sectionImportanciaDev">
             <div id="importanciaH1">
                 <h1>Biografia</h1>
             </div>
             <div id="importanciaP">
-                <p>Atuando como professor de ensino técnico desde 2019, com mais de 10 anos de experiência em tecnologia no ano Centro Paula Souza. Formado em Análise e Desenvolvimento de Sistemas pela Universidade Cruzeiro do Sul (2017), com formação técnica em Informática para Internet, e atualmente cursando MBA em Engenharia de Software USP Esalq.</p>
-                <p>Ao longo da minha carreira, ministrei aulas de desenvolvimento mobile com Flutter, lógica de programação com Dart e integração com bancos de dados como SQLite. Também lecionei sobre Desenvolvimento de Sistemas com Java, desde o briefing até a entrega final, passando por abstração e modelagem de dados, construção de interfaces com Swing e integração com MySQL, desenvolvendo CRUDs funcionais e seguros, com tratamento de exceções e implementação de boas práticas de segurança.</p>
-                <p>Além disso, lecionei sobre Design em tecnologia, explorando a teoria das cores e sua aplicação em sites, aplicativos e sistemas. Fui responsável por liderar o desenvolvimento de projetos no Sophie Tech, onde desenvolvemos e-commerces e gerenciamos sistemas ERP.</p>
-                <p>Atuei tambem como Desenvolvedor web, com experiência em PHP, Laravel, Node.js para criação de APIs, React.js, WordPress, WooCommerce e Gestão de Projetos. Também possuo conhecimentos em React Native, JavaScript, Front-End (HTML, CSS, Bootstrap), além de servidores Linux e Windows.</p>
+                <p>Cristiano Silva Nunes, de 37 anos, é um dedicado Analista de Operações que construiu sua trajetória profissional pautada pela responsabilidade, eficiência e atenção aos detalhes. Ao longo de sua carreira, desenvolveu uma sólida experiência na área de Análise, atuando diretamente na otimização de processos, acompanhamento de indicadores e suporte estratégico às operações.</p>
+                <p>Reconhecido por sua habilidade em resolver problemas com rapidez e precisão, Cristiano sempre demonstrou facilidade em interpretar dados, identificar oportunidades de melhoria e implementar soluções que geram impacto real no desempenho operacional. Sua postura analítica, aliada ao compromisso com resultados, o tornou uma peça importante dentro das equipes e projetos dos quais participou.</p>
+                <p>Além de seu conhecimento técnico, Cristiano mantém uma postura colaborativa, sempre buscando aprender, compartilhar experiências e contribuir para ambientes de trabalho mais organizados e eficientes. Seu objetivo profissional continua sendo crescer dentro da área de análise e ampliar ainda mais sua contribuição para o desenvolvimento das operações.</p>
             </div>
         </section>
 
@@ -49,7 +48,7 @@
         </div>
 
         <div id="textosFinais">
-            <p>Entrevista com Eduardo Cesar Correia – Profissional em desenvolvimento de sistemas</p>
+            <p>Entrevista com Cristiano Silva Nunes – Analista de operações profissional.</p>
             <p>© 2025 Vitor Nunes. Todos os direitos reservados.</p>
 
         </div>
